fixed issue with overflow

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,6 +5,7 @@
   background-color: $blocksGreyColor;
   color: #fff;
   border-radius: 0 0 50px 50px;
+  overflow: hidden;
 
   &__wrapper {
     padding: 0 80px;
